unpackaged/main/default/objects/FSL__SLR_Cache__c/FSL__SLR_Cache__c.object-meta.xml
<CustomObject>
    <label>SLR Cache</label>
    <nameField>
        <displayFormat>SLR-C-{0000}</displayFormat>
        <label>SLR Cache Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLRS Cache</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>