unpackaged/main/default/objects/FSL__SLR_Cache__c/fields/FSL__Distance__c.field-meta.xml
<CustomField>
    <fullName>FSL__Distance__c</fullName>
    <label>Distance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>