unpackaged/main/default/objects/FSL__SLR_Cache__c/fields/FSL__From__c.field-meta.xml
<CustomField>
    <fullName>FSL__From__c</fullName>
    <label>From</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>