unpackaged/main/default/objects/FSL__SLR_Cache__c/fields/FSL__Identifier__c.field-meta.xml
<CustomField>
    <fullName>FSL__Identifier__c</fullName>
    <label>Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>