unpackaged/main/default/objects/FSL__SLR_Cache__c/fields/FSL__Time__c.field-meta.xml
<CustomField>
    <fullName>FSL__Time__c</fullName>
    <label>Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>