unpackaged/main/default/objects/FSL__SLR_Cache__c/fields/FSL__To__c.field-meta.xml
<CustomField>
    <fullName>FSL__To__c</fullName>
    <label>To</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>